# RAG-based-Knowledge-Extraction-Challenge

./: .env-template  Create_Vector_Store.ipynb  NB_Create_Vector_Store.ipynb  NB_Simple_RAG_Pipeline.ipynb  README.md  main.py  pyproject.toml
data/vectorstore/cdaeeeab-77bf-4b06-af71-5b143a347750/: index_metadata.pickle
examples/: Create_Vector_Store.ipynb  Playground_Chat_Model.ipynb  Playground_Chunking.ipynb  Playground_Embeddings.ipynb  Playground_RAG_Pipeline.ipynb
src/ragchallenge/api/: api.py  config.py  database.py  generator.py  llm.py  paraphraser.py  rag.py
src/ragchallenge/api/interfaces/: generator.py  ragmodel.py  ragmodelexpanded.py
src/ragchallenge/api/routers/: qa_service.py  query_service.py  question_service.py  service.py
src/ragchallenge/api/schemas/: messages.py
src/ragchallenge/api/utils/: chatmodel.py  chatmodelexpanded.py  documentstore  documentstore.py  queryextender.py  questiongenerator.py
src/ragchallenge/gui/: main.py
